@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-04-01T01:04:22Z",
-  "count_outdated" : 97,
-  "uniques_outdated" : 79,
+  "timestamp" : "2025-04-05T00:56:19Z",
+  "count_outdated" : 98,
+  "uniques_outdated" : 80,
   "count" : 100,
   "uniques" : 82,
   "clones" : [
-    {
-      "timestamp": "2025-03-21T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-03-26T00:00:00Z",
       "count": 1,
